Add script for watching test

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha -R spec -r should && jshint index.js test/*.js",
+    "watch": "mocha -R spec -r should -w",
     "coverage": "istanbul cover _mocha --report lcovonly -- -R spec",
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage"
   },
