--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "should": "~3.1.2"
   },
   "dependencies": {
+    "async": "~0.2.10",
     "gulp-util": "~2.2.14",
     "lodash": "~2.4.1",
     "through2": "~0.4.1"
