Output lcov-report

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha -R spec -r should && jshint index.js test/*.js",
     "watch": "mocha -R spec -r should -w",
-    "coverage": "istanbul cover _mocha --report lcovonly -- -R spec",
+    "coverage": "istanbul cover _mocha -- -R spec",
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage"
   },
   "repository": {
