--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "coveralls": "~2.8.0",
     "gulp": "~3.5.2",
     "istanbul": "~0.2.4",
+    "jscs": "~1.3.0",
     "jshint": "~2.4.4",
     "mocha": "~1.17.1",
     "mocha-lcov-reporter": "0.0.1",
