--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
   },
   "homepage": "https://github.com/sun-zheng-an/gulp-shell",
   "devDependencies": {
-    "coveralls": "~2.8.0",
-    "gulp": "~3.5.5",
+    "coveralls": "~2.10.0",
+    "gulp": "~3.6.0",
     "istanbul": "~0.2.6",
     "jscs": "~1.3.0",
     "jshint": "~2.4.4",
-    "mocha": "~1.17.1",
+    "mocha": "~1.18.2",
     "mocha-lcov-reporter": "0.0.1",
-    "should": "~3.1.3"
+    "should": "~3.2.0-beta1"
   },
   "dependencies": {
     "async": "~0.2.10",
