--- a/package.json
+++ b/package.json
@@ -25,18 +25,18 @@
   "homepage": "https://github.com/sun-zheng-an/gulp-shell",
   "devDependencies": {
     "coveralls": "~2.10.0",
-    "gulp": "~3.6.0",
-    "istanbul": "~0.2.6",
-    "jscs": "~1.3.0",
-    "jshint": "~2.4.4",
-    "mocha": "~1.18.2",
+    "gulp": "~3.8.0",
+    "istanbul": "~0.2.11",
+    "jscs": "~1.5.1",
+    "jshint": "~2.5.1",
+    "mocha": "~1.20.1",
     "mocha-lcov-reporter": "0.0.1",
-    "should": "~3.2.0-beta1"
+    "should": "~4.0.4"
   },
   "dependencies": {
-    "async": "~0.2.10",
-    "gulp-util": "~2.2.14",
+    "async": "~0.9.0",
+    "gulp-util": "~2.2.17",
     "lodash": "~2.4.1",
-    "through2": "~0.4.1"
+    "through2": "~0.5.1"
   }
 }
