--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
   },
   "homepage": "https://github.com/sun-zheng-an/gulp-shell",
   "devDependencies": {
+    "chai": "~2.1.1",
     "coveralls": "~2.11.2",
     "eslint": "~0.16.2",
     "gulp": "~3.8.11",
     "istanbul": "~0.3.7",
     "mocha": "~2.2.1",
-    "mocha-lcov-reporter": "0.0.2",
-    "should": "~5.1.0"
+    "mocha-lcov-reporter": "0.0.2"
   },
   "dependencies": {
     "async": "~0.9.0",
