--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,5 @@
+extends: eslint:recommended
+
 env:
   node: true
 
@@ -16,8 +18,6 @@ rules:
   semi: [2, never]
   space-after-keywords: 2
   space-before-blocks: 2
-  space-before-function-parentheses: [2, {anonymous: always, named: never}]
-  space-in-brackets: [2, never]
+  space-before-function-paren: [2, {anonymous: always, named: never}]
   space-in-parens: [2, never]
   space-unary-ops: [2, {words: true, nonwords: false}]
-  spaced-line-comment: 2
