--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "async": "~1.5.0",
     "gulp-util": "~3.0.7",
-    "lodash": "~3.10.1",
+    "lodash": "^3.10.1",
     "through2": "~2.0.0"
   }
 }
