--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "mocha-lcov-reporter": "~1.0.0"
   },
   "dependencies": {
-    "async": "~1.5.0",
-    "gulp-util": "~3.0.7",
+    "async": "^1.5.0",
+    "gulp-util": "^3.0.7",
     "lodash": "^4.0.0",
-    "through2": "~2.0.0"
+    "through2": "^2.0.0"
   }
 }
