Use Standard Style

--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
   "devDependencies": {
     "chai": "~3.4.0",
     "coveralls": "~2.11.4",
-    "eslint": "~1.10.3",
     "gulp": "~3.9.0",
     "istanbul": "~0.4.0",
     "mocha": "~2.3.3",
-    "mocha-lcov-reporter": "~1.0.0"
+    "mocha-lcov-reporter": "~1.0.0",
+    "standard": "^8.6.0"
   },
   "dependencies": {
     "async": "^1.5.0",
