--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
   },
   "homepage": "https://github.com/sun-zheng-an/gulp-shell",
   "devDependencies": {
-    "chai": "~3.4.0",
-    "coveralls": "~2.11.4",
-    "gulp": "~3.9.0",
-    "istanbul": "~0.4.0",
-    "mocha": "~2.3.3",
-    "mocha-lcov-reporter": "~1.0.0",
+    "chai": "^3.5.0",
+    "coveralls": "^2.11.16",
+    "gulp": "^3.9.1",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "standard": "^8.6.0"
   },
   "dependencies": {
-    "async": "^1.5.0",
-    "gulp-util": "^3.0.7",
-    "lodash": "^4.0.0",
-    "through2": "^2.0.0"
+    "async": "^2.1.5",
+    "gulp-util": "^3.0.8",
+    "lodash": "^4.17.4",
+    "through2": "^2.0.3"
   }
 }
