--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
 node_js:
-  - "4.1"
-  - "4.0"
-  - "0.12"
+  - "node"
+  - "6"
+  - "4"
 after_script:
   - npm run coveralls
 sudo: false
