--- a/package.json
+++ b/package.json
@@ -34,9 +34,13 @@
   },
   "dependencies": {
     "async": "^2.1.5",
-    "gulp-util": "^3.0.8",
+    "chalk": "^2.3.0",
+    "fancy-log": "^1.3.2",
     "lodash": "^4.17.4",
-    "through2": "^2.0.3"
+    "lodash.template": "^4.4.0",
+    "plugin-error": "^0.1.2",
+    "through2": "^2.0.3",
+    "vinyl": "^2.1.0"
   },
   "engines": {
     "node": ">=4.8.0 <5.0.0 || >=5.7.0"
