--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "standard": "^8.6.0"
+    "standard": "^8.6.0",
+    "vinyl": "^2.1.0"
   },
   "dependencies": {
     "async": "^2.1.5",
@@ -39,8 +40,7 @@
     "lodash": "^4.17.4",
     "lodash.template": "^4.4.0",
     "plugin-error": "^0.1.2",
-    "through2": "^2.0.3",
-    "vinyl": "^2.1.0"
+    "through2": "^2.0.3"
   },
   "engines": {
     "node": ">=4.8.0 <5.0.0 || >=5.7.0"
