--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "chai": "^4.2.0",
     "coveralls": "^3.0.2",
     "gulp": "^4.0.0",
-    "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
+    "nyc": "^13.1.0",
     "standard": "^12.0.1",
     "vinyl": "^2.2.0"
   },
