--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "gulp-shell",
   "version": "0.6.5",
   "description": "A handy command line interface for gulp",
-  "main": "index.js",
+  "main": "./lib/index.js",
+  "typings": "./lib/index.d.ts",
+  "files": [
+    "lib/index.*"
+  ],
   "scripts": {
+    "build": "gulp build",
     "test": "gulp test",
     "coveralls": "gulp coveralls"
   },
@@ -24,6 +29,14 @@
   },
   "homepage": "https://github.com/sun-zheng-an/gulp-shell",
   "devDependencies": {
+    "@types/async": "^2.4.1",
+    "@types/chai": "^4.1.7",
+    "@types/fancy-log": "^1.3.1",
+    "@types/gulp": "^4.0.5",
+    "@types/lodash.template": "^4.4.5",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^11.10.4",
+    "@types/through2": "^2.0.34",
     "chai": "^4.2.0",
     "coveralls": "^3.0.3",
     "gulp": "^4.0.0",
@@ -31,13 +44,14 @@
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^13.3.0",
     "prettier": "^1.16.4",
+    "ts-node": "^8.0.2",
+    "typescript": "^3.3.3333",
     "vinyl": "^2.2.0"
   },
   "dependencies": {
     "async": "^2.6.2",
     "chalk": "^2.4.2",
     "fancy-log": "^1.3.3",
-    "lodash": "^4.17.11",
     "lodash.template": "^4.4.0",
     "plugin-error": "^1.0.1",
     "through2": "^3.0.1"
