--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A handy command line interface for gulp",
   "main": "index.js",
   "scripts": {
-    "test": "gulp test lint",
+    "test": "gulp test",
     "coveralls": "gulp coveralls"
   },
   "repository": {
@@ -30,7 +30,7 @@
     "mocha": "^6.0.2",
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^13.3.0",
-    "standard": "^12.0.1",
+    "prettier": "^1.16.4",
     "vinyl": "^2.2.0"
   },
   "dependencies": {
