--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build": "gulp build",
-    "test": "gulp test",
+    "test": "gulp test lint",
     "coveralls": "gulp coveralls"
   },
   "repository": {
@@ -37,8 +37,12 @@
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.10.4",
     "@types/through2": "^2.0.34",
+    "@typescript-eslint/eslint-plugin": "^1.4.2",
+    "@typescript-eslint/parser": "^1.4.2",
     "chai": "^4.2.0",
     "coveralls": "^3.0.3",
+    "eslint": "^5.15.0",
+    "eslint-config-prettier": "^4.1.0",
     "gulp": "^4.0.0",
     "mocha": "^6.0.2",
     "mocha-lcov-reporter": "^1.3.0",
