Add scripts for publishing

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "scripts": {
     "build": "gulp build",
     "test": "gulp test lint",
-    "coveralls": "gulp coveralls"
+    "coveralls": "gulp coveralls",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test"
   },
   "repository": {
     "type": "git",
