Require Node.js >= 6.0.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: node_js
 node_js:
-  - "node"
-  - "6"
-  - "5"
-  - "4"
+  - 'node'
+  - '6'
 after_script:
   - npm run coveralls
 sudo: false
