--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build": "gulp build",
-    "test": "gulp test lint",
+    "test": "gulp test",
     "coveralls": "gulp coveralls",
     "prepare": "npm run build",
     "prepublishOnly": "npm test"
@@ -31,24 +31,22 @@
   },
   "homepage": "https://github.com/sun-zheng-an/gulp-shell",
   "devDependencies": {
-    "@types/chai": "^4.1.7",
     "@types/fancy-log": "^1.3.1",
     "@types/gulp": "^4.0.5",
+    "@types/jest": "^24.0.11",
     "@types/lodash.template": "^4.4.5",
-    "@types/mocha": "^5.2.6",
     "@types/node": "^11.10.4",
     "@types/through2": "^2.0.34",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
     "@typescript-eslint/parser": "^1.4.2",
-    "chai": "^4.2.0",
     "coveralls": "^3.0.3",
     "eslint": "^5.15.0",
     "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-jest": "^22.4.1",
     "gulp": "^4.0.0",
-    "mocha": "^6.0.2",
-    "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^13.3.0",
+    "jest": "^24.5.0",
     "prettier": "^1.16.4",
+    "ts-jest": "^24.0.0",
     "ts-node": "^8.0.2",
     "typescript": "^3.3.3333",
     "vinyl": "^2.2.0"
