Reuse TypeScript helper functions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "declarationMap": true,
     "sourceMap": true,
     "outDir": "./lib",
+    "importHelpers": true,
 
     "strict": true,
     "noUnusedLocals": true,
