--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "fancy-log": "^1.3.3",
     "lodash.template": "^4.4.0",
     "plugin-error": "^1.0.1",
-    "through2": "^3.0.1"
+    "through2": "^3.0.1",
+    "tslib": "^1.9.3"
   },
   "engines": {
     "node": ">=6.0.0"
