--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,8 @@
   ],
   "parserOptions": {
     "project": "tsconfig.json"
+  },
+  "rules": {
+    "@typescript-eslint/explicit-function-return-type": "off"
   }
 }
